--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "type": "module",
   "scripts": {
     "test": "node --experimental-vm-modules --no-warnings node_modules/jest/bin/jest.js",
-    "test-coverage": "node --experimental-vm-modules --no-warnings node_modules/jest/bin/jest.js --coverage"
+    "coverage": "node --experimental-vm-modules --no-warnings node_modules/jest/bin/jest.js --coverage"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "coveralls": "^3.1.1",
     "jest": "^29.7.0"
   }
 }
