--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,9 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        # Only test with 22.x for now
-        # Maybe add 18.x and 20.x later
-        node-version: [22.x]
+        node-version: [18.x, 20.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
